network.tf
provider "aws" {
  access_key = "${var.aws_access_key}"
  secret_key = "${var.aws_secret_key}"
  region     = "${var.region}"
}
resource "aws_vpc" "default" {
    cidr_block = "${var.vpc-cidr}"
    
    enable_dns_hostnames = true
    tags {
      Name = "My ubertas vpc"
    }
}
